<resources>
    <string name="app_name">StockIt</string>
    <string name="home">HOME</string>
    <string name="receipt">RECEIPT</string>
    <string name="inventory">INVENTORY</string>
    <string name="more">MORE</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="account_inactive">Account is inactive. \nPlease contact admin to activate account.</string>
    <string name="reloadV">Already Verified? \nClick to Reload</string>
    <string name="reloadA">Already Activated? \nClick to Reload</string>
    <string name="create_account">Create Account</string>
    <string name="sign_account">Sign In Existing Account</string>
    <string name="loading">Loading…</string>
    <string name="account_verify">Verification email has been sent. \nPlease check your email and try again. \n\nEmail not received? \nClick resend to try again.</string>
    <string name="resend">Resend</string>
    <string name="manage_users">Manage Users</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="back">Back</string>
    <string name="admin">Admin:</string>
    <string name="activated">Activated:</string>
    <string name="new_email">New Email</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="delete">Delete</string>
    <string name="price_default">0.00</string>
    <string name="stocks">Stocks</string>
    <string name="search_item">Search Item</string>
    <string name="add_item">Add Item</string>
    <string name="reg_price">Regular Price</string>
    <string name="dsc_price">Discounted Price</string>
    <string name="unit_price">Unit Price</string>
    <string name="total_price">Total Price</string>
    <string name="edit">Edit</string>
    <string name="zero">0</string>
    <string name="item_name">Item Name</string>
    <string name="item_size">Item Size</string>
    <string name="add_item_to_inventory">ADD ITEM TO INVENTORY</string>
    <string name="plus_one">+1</string>
    <string name="minus_one">-1</string>
    <string name="no_results_found">No Results Found</string>
    <string name="add_item_to_receipt">ADD ITEM TO RECEIPT</string>
    <string name="click_to_add">Click the add button to add items.</string>
    <string name="print">Print</string>
    <string name="cancel">Cancel</string>
    <string name="bluetooth_devices">Bluetooth Devices</string>
    <string name="delete_user">Delete User</string>
    <string name="warning_user_deletion">Warning! User Deletion</string>
    <string name="delete_customer">Delete Customer</string>
    <string name="warning_customer_deletion">Warning! Customer Deletion</string>
    <string name="warning_user_status_change">Warning! User Status Change</string>
    <string name="ok">OK</string>
    <string name="email_verification_required">Email Verification Required</string>
    <string name="email_verification_required_text">Please verify your new email before signing in again.\nEmail will only be changed after verification.</string>
    <string name="introduce_yourself">Introduce Yourself!</string>
    <string name="enter_your_name">Please enter your name.</string>
    <string name="display_name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="print_receipt">Print Receipt</string>
    <string name="please_enter_cash_amount">Please enter cash amount</string>
    <string name="connection_timeout">Connection Timeout</string>
    <string name="failed_to_connect_to_printer">Failed to connect to printer. Would you like to retry?</string>
    <string name="retry">Retry</string>
    <string name="invoice_no">Invoice #</string>
    <string name="date_time">Date-Time</string>
    <string name="total">Total</string>
    <string name="amount_rendered_cash">Amount Rendered Cash</string>
    <string name="items_purchased">Items Purchased</string>
    <string name="change">Change</string>
    <string name="input_field">Input Field</string>
    <string name="receipt_log">Receipt Log</string>
    <string name="user_log">User Log</string>
    <string name="user">User</string>
    <string name="target">Target</string>
    <string name="action">Action</string>
    <string name="user_action_details">User Action Details</string>
    <string name="use_discounted_price">Use Discounted Price?</string>
    <string name="daily_sales">Daily Sales</string>
    <string name="pick_customer_name">Pick Customer Name</string>
    <string name="please_pick_customer_name">Please pick customer name.\nIf name is not in the list, customer is not eligible for discount.\nMake sure to cancel the transaction and turn off discount if customer is not eligible.</string>
    <string name="app_requires_bluetooth_permissions">App Requires Bluetooth Permissions</string>
    <string name="grant_permissions">Grant Permissions</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="active_paired_devices">Active Paired Devices</string>
    <string name="pair_new_device">Pair new device</string>
    <string name="scanned_devices">Scanned Devices</string>
    <string name="save">Save</string>
    <string name="no_printer_saved_click_to_find_printer">No Printer Saved. Click to Find Printer.</string>
    <string name="check_out">Check Out</string>
    <string name="no_devices_found">No Devices Found</string>
    <string name="quantity_type">Quantity Type</string>
    <string name="pcs">pcs</string>
    <string name="kg">kg</string>
    <string name="quantity">Quantity</string>
    <string name="manage_customers">Manage Customers</string>
    <string name="previous_transactions">Previous Transactions</string>
    <string name="add_customer">Add Customer</string>
    <string name="account">Account</string>
    <string name="admin_tools">Admin Tools</string>
    <string name="customer_name">Customer Name</string>
    <string name="device_name">Device Name</string>
    <string name="_00_11_22_33_44_55">00:11:22:33:44:55</string>
    <string name="warning">Warning</string>
</resources>